# git-app-slint

./: .gitignore  Cargo.toml
src/: main.rs  uc_find_user.rs
ui/: app-window.slint  find-user.slint  user-slot.slint
