[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
git-info = { git = "https://github.com/Juanjofp/git-info-rust.git", branch = "main" }
file-downloader = { git = "https://github.com/Juanjofp/rust-file-downloader.git", branch = "main" }

[build-dependencies]
slint-build = "1.8.0"
